--- a/config/config.ini
+++ b/config/config.ini
@@ -7,12 +7,12 @@
 ; image     自定义图片
 ; marker    matplotlib的marker标记
 ; None      不显示
-ico type = image
+ico_type = image
 
 ; marker样式详见matplotlib官网https://matplotlib.org/stable/api/markers_api.html
 ; 可以为列表或字符串
 ; marker style = (6, 2)
-marker style = .
+marker_style = .
 
 ; 图标路径
 点赞 = .\\images\\点赞.png
@@ -24,20 +24,20 @@ marker style = .
 ; 位[0]       宽度: float
 ; 位[1]       高度: float
 ; 1代表100像素, 7.2就代表720像素(大概)
-; 最好不要超过(15, 7.5), 视频可能会导出失败
-fig size = (10, 5)
+; 最好不要超过(15, 8), 视频可能会导出失败
+fig_size = (10, 5)
 
 ; 坐标轴axes在绘图区域的位置及宽高
 ; 位[0], 位[1]    坐标轴左下角的位置 : float
 ; 位[2], 位[3]    坐标轴的宽和高    : float
 ; 以figure的长和宽为单位1, 0.1代表figure长或者宽的1/10
-axes rect = (0.1, 0.1, 0.8, 0.8)
+axes_rect = (0.1, 0.1, 0.8, 0.8)
 
 ; 坐标轴右侧以及顶端的边框是否显示
-axes frame on = False
+axes_frame_on = False
 
 ; 坐标轴右侧留白宽度, 单位为相邻两个x轴标签的距离: float
-right space = 1
+right_space = 1
 
 
 ; -----------------------line-------------------------
@@ -45,33 +45,33 @@ right space = 1
 auto_fill = True
 
 ; 相邻两个日期之间分割bezier smoothness个点, 越大越平滑: int
-bezier smoothness = 20
+bezier_smoothness = 20
 
 ; 是否自动旋转控制柄
-bezier auto rotate = True
+bezier_auto_rotate = True
 
 ; 是否自动缩放控制柄
-bezier auto scale = True
+bezier_auto_scale = True
 
 ; 自动缩放范围设置, 值越小则曲线越平直, 数值范围为0-1: float
-bezier scale range = (0.6, 1)
+bezier_scale_range = (0.6, 1)
 
 ; 相邻两个日期之间的图标运动路径分割次数, 越大则图标与曲线越契合: int
 ; 这个其实应该与frame div合并的, 以后再改
-point div = 20
+point_div = 20
 
 ; -----------------------grid-------------------------
 ; 是否开启y轴的网格线
-y grid on = True
+y_grid_on = True
 
 ; 是否开启x轴的网格线
-x grid on = False
+x_grid_on = False
 
 ; y方向的网格线透明度: float
-y grid alpha = 0.5
+y_grid_alpha = 0.5
 
 ; x方向的网格线透明度: float
-x grid alpha = 0.5
+x_grid_alpha = 0.5
 
 ; y轴的网格线样式, 样式设定详见matplotlib官网https://matplotlib.org/stable/gallery/lines_bars_and_markers/linestyles.html
 ; '-'    or 'solid'	    solid line
@@ -80,21 +80,21 @@ x grid alpha = 0.5
 ; ':'    or 'dotted'	dotted line
 ; 'None' or ' ' or ''	draw nothing
 ; 支持(offset, on-off-seq): int
-; 例如: y grid linestyle = (0, (6, 2))
-; ------x grid linestyle = (0, (1, 2, 3, 4))
-y grid linestyle = (0, (1, 2, 3, 6))
+; 例如: y_grid_linestyle = (0, (6, 2))
+; ------x_grid_linestyle = (0, (1, 2, 3, 4))
+y_grid_linestyle = (0, (1, 2, 3, 6))
 
 ; x轴的网格线样式
-x grid linestyle = --
+x_grid_linestyle = --
 ; ----------------------axis---------------------
 ; x轴刻度标签前缀, 不写则不加前缀
-x label prefix =
+x_label_prefix =
 
 ; x轴刻度标签后缀, 不写则不加后缀
-x label suffix =
+x_label_suffix =
 
 ; x轴刻度标签的旋转角度
-x label rotation = 0
+x_label_rotation = 0
 
 ; x轴刻度标签的单位时间
 ; D     天
@@ -102,7 +102,7 @@ x label rotation = 0
 ; Y     年
 ; A     根据表格提供的时间自动设置
 ; 例如   表格为每天的数据, major xlabel设置为M, 则x轴刻度标签将显示为 YYYY-MM 的月份形式
-major x label = A
+major_x_label = A
 
 ;
 ; stage解释:
@@ -111,14 +111,14 @@ major x label = A
 ; stage3 为画到最后一个点之后的x轴压缩过程
 ;
 ; stage2 阶段最多显示max xsection stage2 + 1个x轴标签, -1自动设置
-max x section stage2 = -1
+max_x_section_stage2 = -1
 
 ; stage3 阶段最多显示max xsection stage3 + 1个x轴标签, -1自动设置
-max x section stage3 = -1
+max_x_section_stage3 = -1
 
 ; y轴的范围设置, 0, 0自动设置
-; y lim = 2.5, 5.5
-y lim = (0, 0)
+; y_lim = 2.5, 5.5
+y_lim = (0, 0)
 
 ; y轴标签显示格式化
 ; 整数部分表示小数点向左移动的位数
@@ -130,40 +130,40 @@ y lim = (0, 0)
 ; 0.2   会把  10      显示为10.00
 ; 0.0   会把  10.123  显示为10
 ; 0     不处理
-y label format = 0
+y_label_format = 0
 
 ; y轴刻度标签前缀, 不写则不加前缀
-y prefix =
+y_prefix =
 
 ; y轴刻度标签后缀, 不写则不加后缀
-y suffix =
+y_suffix =
 
 ; -------------------Annotation-------------------
 ; x轴单位, 不写则不显示
-x unit =
+x_unit =
 
 ; x轴单位的位置
 ; 0.5, 0.5整个绘图区域figure的中间位置
 ; 1.0, 1.0整个绘图区域figure的右上角位置
 ; -1.0, -1.0自动设置
-x unit position = (-1.0, -1.0)
+x_unit_position = (-1.0, -1.0)
 
 ; y轴单位, 不写则不显示
-y unit =
+y_unit =
 
 ; y轴单位的位置
 ; 0.5, 0.5整个绘图区域figure的中间位置
 ; 1.0, 1.0整个绘图区域figure的右上角位置
 ; -1.0, -1.0自动设置
-y unit position = (-1.0, -1.0)
+y_unit_position = (-1.0, -1.0)
 
 ; 图例legend显示
-legend on = True
+legend_on = True
 
 ; 设置图例的字体颜色与曲线颜色一致
-legend color = True
+legend_color = True
 
-[line color]
+[line_color]
 ; 曲线颜色设置
 ; 在#前加\防止被注释掉, 或者在两端加双引号
 点赞 = "#4444FF"
@@ -171,7 +171,7 @@ legend color = True
 
 [video] ; ===================设置视频相关====================
 ; 两个相邻时间点刷新frame div帧
-frame div = 20
+frame_div = 20
 
 ; 保存为视频时的帧率, 仅在video type为avi, mp4时有效
 ; fps影响播放速度和时间
@@ -183,10 +183,10 @@ fps = 60
 ; html      你可以尝试一下
 ; png       保存为图片序列, 保留alpha通道
 ; None      不保存
-video type = mp4
+video_type = png
 
 ; ffmpeg程序的绝对路径, 输出mp4需要设置
-ffmpeg path = D:\\ffmpeg\\ffmpeg-20170312-58f0bbc-win64-static\\bin\\ffmpeg.exe
+ffmpeg_path = D:\\ffmpeg\\ffmpeg-20170312-58f0bbc-win64-static\\bin\\ffmpeg.exe
 
 ; 设置曲线绘制方式
 ; False: 只进行一次完整绘制, 曲线显示范围由剪切路径切割  
@@ -230,7 +230,7 @@ font.weight = normal
 ; 注意: 此设置为全局默认设置, 如果对某一个对象的某一属性单独进行了设置, 则全局设置对其无效
 ; ------可能会影响其他的一些功能
 
-[axes setattr]
+[axes_setattr]
 ; 调用axes的方法进行一些设置
 ; 说明: 等号左侧为方法名, 右侧为参数
 ; ------方法名: 详见https://matplotlib.org/stable/api/axes_api.html
